src/objects/Usage__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Case during creation.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Added__c</fullName>
        <label>Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <label>Publication Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Charge_Id__c</fullName>
        <label>Rate Plan Charge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_Zuora_Error_Message__c</fullName>
        <label>Send to Zuora Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_to_Zuora_Time__c</fullName>
        <label>Send to Zuora Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Zuora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StopType__c</fullName>
        <label>StopType</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Id__c</fullName>
        <label>Subscription Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Temp_Stop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Temp Stop</label>
        <referenceTo>Subscription_Temp_Stop__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Of Measure</label>
        <referenceTo>zqu__ZUnitOfMeasure__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Usage_Type__c</fullName>
        <label>Usage Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Id__c</fullName>
        <label>Zuora Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Usage</label>
    <listViews>
        <fullName>ALL1</fullName>
        <columns>NAME</columns>
        <columns>Account_Id__c</columns>
        <columns>Quantity__c</columns>
        <columns>Status__c</columns>
        <columns>UOM__c</columns>
        <columns>Subscription_Id__c</columns>
        <columns>Usage_Type__c</columns>
        <columns>Case__c</columns>
        <columns>StopType__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Id__c</columns>
        <columns>Publication_Code__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Quantity__c</columns>
        <columns>Status__c</columns>
        <columns>Usage_Type__c</columns>
        <columns>StopType__c</columns>
        <columns>Subscription_Id__c</columns>
        <columns>UOM__c</columns>
        <columns>Case__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Zuora_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Id__c</field>
            <operation>equals</operation>
            <value>BA00016039</value>
        </filters>
        <label>Tin View</label>
    </listViews>
    <listViews>
        <fullName>JC_View2</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Account_Id__c</columns>
        <columns>Subscription_Id__c</columns>
        <columns>Status__c</columns>
        <columns>Quantity__c</columns>
        <columns>UOM__c</columns>
        <columns>Publication_Code__c</columns>
        <columns>StopType__c</columns>
        <columns>Usage_Type__c</columns>
        <columns>Case__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Zuora_Id__c</columns>
        <columns>Subscription_Temp_Stop__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Id__c</field>
            <operation>equals</operation>
            <value>BA00016069</value>
        </filters>
        <label>JC View2</label>
    </listViews>
    <listViews>
        <fullName>Kevin_View</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Account_Id__c</columns>
        <columns>Subscription_Id__c</columns>
        <columns>Status__c</columns>
        <columns>Quantity__c</columns>
        <columns>UOM__c</columns>
        <columns>Publication_Code__c</columns>
        <columns>Case__c</columns>
        <columns>StopType__c</columns>
        <columns>Usage_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Zuora_Id__c</columns>
        <columns>Subscription_Temp_Stop__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Id__c</field>
            <operation>equals</operation>
            <value>BA00016090</value>
        </filters>
        <label>Kevin View</label>
    </listViews>
    <listViews>
        <fullName>Stop_Subscription_Usages</fullName>
        <columns>NAME</columns>
        <columns>Account_Id__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Subscription_Id__c</columns>
        <columns>Rate_Plan_Charge_Id__c</columns>
        <columns>Zuora_Id__c</columns>
        <columns>StopType__c</columns>
        <columns>UOM__c</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>StopType__c</field>
            <operation>equals</operation>
            <value>PStop</value>
        </filters>
        <label>Stop Subscription Usages</label>
    </listViews>
    <listViews>
        <fullName>TinVIEW</fullName>
        <columns>NAME</columns>
        <columns>Account_Id__c</columns>
        <columns>Subscription_Id__c</columns>
        <columns>Publication_Code__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Quantity__c</columns>
        <columns>Status__c</columns>
        <columns>Usage_Type__c</columns>
        <columns>StopType__c</columns>
        <columns>UOM__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Zuora_Id__c</columns>
        <columns>Unique_Identifier__c</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case__c</field>
            <operation>equals</operation>
            <value>03087419</value>
        </filters>
        <label>TinVIEW</label>
    </listViews>
    <listViews>
        <fullName>jifi</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Quantity__c</columns>
        <columns>UOM__c</columns>
        <columns>Date_Added__c</columns>
        <columns>End_Date__c</columns>
        <columns>Publication_Code__c</columns>
        <columns>Rate_Plan_Charge_Id__c</columns>
        <columns>Send_to_Zuora_Error_Message__c</columns>
        <columns>Send_to_Zuora_Time__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>StopType__c</columns>
        <columns>Subscription_Id__c</columns>
        <columns>Subscription_Temp_Stop__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Id__c</field>
            <operation>equals</operation>
            <value>BA00014361</value>
        </filters>
        <label>jifi</label>
    </listViews>
    <nameField>
        <displayFormat>U-{000000}</displayFormat>
        <label>Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usages</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>